# max-mixture

./: .gitignore  CMakeLists.txt  README.txt
datasets/multimodal/: README.txt  _MM_1_manhattanG2O3500.g2o  _MM_2_manhattanG2O3500.g2o  _N_1_manhattanG2O3500.g2o  _N_2_manhattanG2O3500.g2o
datasets/outliers/: manhattanOlson3500_n100_grp10.g2o
datasets/unimodal/: readme.txt
datasets/unimodal/city/: MaxMix-n1000_local_seed1020988071w_0.01s_1e-11_city10000.g2o  MaxMix-n1000_randm_seed197804269w_0.01s_1e-11_city10000.g2o  MaxMix-n100_grp10_seed2036932421w_0.01s_1e-11_city10000.g2o  MaxMix-n100_lgr10_seed566864332w_0.01s_1e-11_city10000.g2o
datasets/unimodal/manhattanG2O/: MaxMix-n1000_local_seed1586059537w_0.01s_1e-11_manhattanG2O3500.g2o  MaxMix-n1000_randm_seed127469208w_0.01s_1e-11_manhattanG2O3500.g2o  MaxMix-n100_grp10_seed48989453w_0.01s_1e-11_manhattanG2O3500.g2o  MaxMix-n100_lgr10_seed1244124294w_0.01s_1e-11_manhattanG2O3500.g2o
datasets/unimodal/manhattanOlson/: MaxMix-n1000_local_seed1129968082w_0.01s_1e-11_manhattanOlson3500.g2o  MaxMix-n1000_randm_seed791095741w_0.01s_1e-11_manhattanOlson3500.g2o  MaxMix-n100_grp10_seed1630990442w_0.01s_1e-11_manhattanOlson3500.g2o  MaxMix-n100_lgr10_seed773331599w_0.01s_1e-11_manhattanOlson3500.g2o
datasets/unimodal/sphere/: MaxMix-n1000_local_seed571332197w_0.01s_1e-11_sphere2500.g2o  MaxMix-n1000_randm_seed985361137w_0.01s_1e-11_sphere2500.g2o  MaxMix-n100_grp10_seed1801473052w_0.01s_1e-11_sphere2500.g2o  MaxMix-n100_lgr10_seed1331227084w_0.01s_1e-11_sphere2500.g2o
src/: CMakeLists.txt  edge_se2_mixture.cpp  edge_se2_mixture.h  edge_se2_pointxy_mixture.cpp  edge_se2_pointxy_mixture.h  edge_se3_mixture.cpp  edge_se3_mixture.h  types_g2o_mixture.cpp  types_g2o_mixture.h
